# azure-logger-bundle

./: .gitignore  README.md  environment.yml  pyproject.toml
.github/workflows/: main.yml
