[tool.poetry]
name = "azure-logger-bundle"
version = "0.2.0"
description = "Azure Logger bundle for the Pyfony framework"
readme = "README.md"
repository = "https://github.com/bricksflow/azure-logger-bundle"

license = "MIT"

authors = [
    "Jiri Koutny <jiri.koutny@datasentics.com>"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

include = ["*.yaml"]

packages = [
    { include = "azureloggerbundle", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.7"
opencensus = ">=0.7.7,<1.0.0"
opencensus-ext-azure = "^1.0"
logger-bundle = "^0.6.1"
pyfony-bundles = "^0.3.2"

[tool.poetry.dev-dependencies]
pylint = "^2.4"
pytest = "^5.2"
pyfony-core = "^0.7.1"

[tool.poetry.plugins."pyfony.bundle"]
create = "azureloggerbundle.AzureLoggerBundle:AzureLoggerBundle"

[pyfony.bootstrap]
containerInit = "pyfonycore.container.containerInit:initWithCurrentBundle"
rootModuleName = "azureloggerbundle"
